--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>Play Snake</h1>
     <canvas id="snake" width="760" height="480"></canvas>
     <h2>Instructions</h2>
+    <p>Move the green snake up, down, left, or right using the arrow keys or W,S,A, and D keys.<br>
+    Collect red apples to increase your score, but if you run into yourself or off the screen that's game over.</p>
     <script type="text/javascript" src="snake.js"></script>
   </body>
 </html>
